infrastructure/istio/virtual-services/observability-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: observability-vs
  namespace: observability
spec:
  gateways:
    - public-gateway

  hosts:
    - observability.ai-saas.com

  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: grafana.observability.svc.cluster.local
            port:
              number: 3000
